Final changes before launch.

--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
     <div class="about-box animate delay-2">
       <p class="section-label">About Me</p>
       <p>
-        I see a problem, find a solution and ship it. I'm currently working on <a href="https://farifari.com/wikimeaty/"><strong>Wiki Meaty 🥩</strong></a> and growing my audience online, so follow along.
+        I see a problem, find a solution and ship it. I'm currently working on <a href="https://farifari.com/wikimeaty/" target="_blank"><strong>Wiki Meaty 🥩</strong></a> and growing my audience online, so follow along.
       </p>
     </div>
 
@@ -462,7 +462,7 @@
     <div class="section animate delay-3">
       <p class="section-label">My Projects</p>
       
-      <a href="https://farifari.com/wikimeaty/" class="card">
+      <a href="https://farifari.com/wikimeaty/" target="_blank" class="card">
         <span class="card-emoji">🥩</span>
         <div class="card-content">
           <div class="card-title">Wiki Meaty</div>
@@ -484,17 +484,17 @@
     <div class="section socials animate delay-4">
       <p class="section-label">Follow Me</p>
       
-      <a href="https://x.com/LFaria001" class="social-card">
+      <a href="https://x.com/LFaria001" target="_blank" class="social-card">
         <span class="social-icon" style="color: #000; font-weight: 800;">𝕏</span>
         Twitter / X
       </a>
 
-      <a href="https://www.linkedin.com/in/lmvfaria/" class="social-card">
+      <a href="https://www.linkedin.com/in/lmvfaria/" target="_blank" class="social-card">
         <span class="social-icon" style="color: #0A66C2; font-weight: 700;">in</span>
         LinkedIn
       </a>
 
-      <a href="https://www.instagram.com/lfaria001/" class="social-card">
+      <a href="https://www.instagram.com/lfaria001/" target="_blank" class="social-card">
         <span class="social-icon" style="display: flex; align-items: center;">
           <svg viewBox="0 0 24 24" width="22" height="22">
             <defs>
