--- a/wikimeaty/index.html
+++ b/wikimeaty/index.html
@@ -505,6 +505,7 @@
         <div class="container">
             <p id="footerTxt">&copy; 2026 Wiki Meaty. All rights reserved.</p>
             <div class="footer-links">
+                <a href="https://farifari.com" target="_blank">More projects at farifari.com</a>
                 <a href="privacy.html" id="privacyLink">Privacy</a>
                 <a href="terms.html" id="termsLink">Terms</a>
             </div>
