--- a/index.html
+++ b/index.html
@@ -528,6 +528,7 @@
           Hey! Drop me a message below.
         </div>
         <form class="chat-form" id="chatForm" action="https://formspree.io/f/mjggpyeb" method="POST">
+          <input type="text" name="_gotcha" style="display:none" tabindex="-1" autocomplete="off">
           <input type="text" name="name" placeholder="Your name (optional)">
           <input type="email" name="email" placeholder="Your email (optional)">
           <textarea name="message" placeholder="Type your message..." required></textarea>
