End of the Landing Page, start of the App.

--- a/wikimeaty/index.html
+++ b/wikimeaty/index.html
@@ -561,8 +561,8 @@
             <p id="footerTxt">&copy; 2026 Wiki Meaty. All rights reserved.</p>
             <div class="footer-links">
                 <a href="https://farifari.com" target="_blank">More projects at farifari.com</a>
-                <a href="privacy.html" id="privacyLink">Privacy</a>
-                <a href="terms.html" id="termsLink">Terms</a>
+                <a href="https://farifari.com/wikimeaty/privacy.html" id="privacyLink">Privacy</a>
+                <a href="https://farifari.com/wikimeaty/terms.html" id="termsLink">Terms</a>
             </div>
         </div>
     </footer>
