--- a/index.html
+++ b/index.html
@@ -489,11 +489,6 @@
         Twitter / X
       </a>
 
-      <a href="https://www.linkedin.com/in/lmvfaria/" target="_blank" class="social-card">
-        <span class="social-icon" style="color: #0A66C2; font-weight: 700;">in</span>
-        LinkedIn
-      </a>
-
       <a href="https://www.instagram.com/lfaria001/" target="_blank" class="social-card">
         <span class="social-icon" style="display: flex; align-items: center;">
           <svg viewBox="0 0 24 24" width="22" height="22">
@@ -511,6 +506,16 @@
           </svg>
         </span>
         Instagram
+      </a>
+
+      <a href="https://www.linkedin.com/in/lmvfaria/" target="_blank" class="social-card">
+        <span class="social-icon" style="color: #0A66C2; font-weight: 700;">in</span>
+        LinkedIn
+      </a>
+
+      <a href="https://www.facebook.com/profile.php?id=100089929417753" target="_blank" class="social-card">
+        <span class="social-icon" style="color: #1877F2; font-weight: 700;">f</span>
+        Facebook
       </a>
     </div>
 
