--- a/wikimeaty/privacy.html
+++ b/wikimeaty/privacy.html
@@ -197,8 +197,7 @@
         <h2>11. Contact Us</h2>
         <p>If you have any questions about this Privacy Policy, please contact us:</p>
         <ul>
-            <li>Email: <a href="mailto:privacy@wikimeaty.com">privacy@wikimeaty.com</a></li>
-            <li>Website: <a href="index.html">Wiki Meaty</a></li>
+            <li>Website: <a href="https://farifari.com/wikimeaty/">Wiki Meaty</a></li>
         </ul>
     </div>
 
