--- a/wikimeaty/terms.html
+++ b/wikimeaty/terms.html
@@ -201,8 +201,7 @@
         <h2>13. Contact Information</h2>
         <p>If you have any questions about these Terms of Service, please contact us:</p>
         <ul>
-            <li>Email: <a href="mailto:legal@wikimeaty.com">legal@wikimeaty.com</a></li>
-            <li>Website: <a href="index.html">Wiki Meaty</a></li>
+            <li>Website: <a href="https://farifari.com/wikimeaty/">Wiki Meaty</a></li>
         </ul>
 
         <h2>14. Acceptance of Terms</h2>
