--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <meta property="og:image" content="https://farifari.com/ProfilePicture.jpeg">
 
   <!-- Twitter -->
-  <meta name="twitter:card" content="summary">
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="farifari | Think. Build. Ship.">
   <meta name="twitter:description" content="I see a problem, find a solution and ship it. Follow along as I build in public.">
   <meta name="twitter:image" content="https://farifari.com/ProfilePicture.jpeg">
