--- a/index.html
+++ b/index.html
@@ -471,6 +471,20 @@
         <span class="card-arrow">→</span>
       </a>
 
+      <a href="https://farifari.com/eatoutdecider/" target="_blank" class="card">
+        <span class="card-emoji" style="display: flex; align-items: center;">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="36" height="36">
+            <circle cx="50" cy="50" r="48" fill="#FF6B35"/>
+            <text x="50" y="68" font-family="Georgia, serif" font-size="55" fill="white" text-anchor="middle">?</text>
+          </svg>
+        </span>
+        <div class="card-content">
+          <div class="card-title">Eat Out Decider</div>
+          <div class="card-subtitle">Live</div>
+        </div>
+        <span class="card-arrow">→</span>
+      </a>
+
       <div class="card">
         <span class="card-emoji">🚀</span>
         <div class="card-content">
