Added Google Analytics.

--- a/eatoutdecider/index.html
+++ b/eatoutdecider/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Eat Out Decider</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-65726M56XE"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-65726M56XE');
+    </script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Instrument+Serif:ital@0;1&display=swap" rel="stylesheet">
@@ -412,24 +420,6 @@
             color: var(--text);
         }
 
-        /* Footer */
-        .footer {
-            text-align: center;
-            padding: 24px 20px;
-            font-size: 0.9rem;
-            color: var(--text-dim);
-        }
-
-        .footer a {
-            color: var(--accent);
-            text-decoration: none;
-            transition: color 0.2s ease;
-        }
-
-        .footer a:hover {
-            color: var(--text);
-        }
-
         /* Modal */
         .modal-overlay {
             display: none;
@@ -644,11 +634,6 @@
             <button class="btn-primary" onclick="startOver()">Try Again</button>
         </div>
     </div>
-
-    <!-- Footer -->
-    <footer class="footer">
-        More projects at <a href="https://farifari.com" target="_blank">farifari.com</a>
-    </footer>
 
     <!-- Feedback Button -->
     <button class="feedback-btn" onclick="openFeedback()">💬 Feedback</button>
