Added Eat Out Decider to the About Me section.

--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
     <div class="about-box animate delay-2">
       <p class="section-label">About Me</p>
       <p>
-        I see a problem, find a solution and ship it. I'm currently working on <a href="https://farifari.com/wikimeaty/" target="_blank"><strong>Wiki Meaty 🥩</strong></a> and growing my audience online, so follow along.
+        I see a problem, find a solution and ship it. I'm currently working on <a href="https://farifari.com/wikimeaty/" target="_blank"><strong>Wiki Meaty 🥩</strong></a> and growing my audience online, so follow along. I also just launched <a href="https://farifari.com/eatoutdecider/" target="_blank"><strong>Eat Out Decider <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="16" height="16" style="vertical-align: middle;"><circle cx="50" cy="50" r="48" fill="#FF6B35"/><text x="50" y="68" font-family="Georgia, serif" font-size="55" fill="white" text-anchor="middle">?</text></svg></strong></a>. Go check it out!
       </p>
     </div>
 
